# chalice-demo

./: .gitignore  Makefile  app.py  pyproject.toml
.chalice/: config.json
sample_data/: users_sjis.csv  users_utf8.csv
