[tool.poetry]
name = "chalice-demo"
version = "0.1.0"
description = "Demonstration using Chalice."
authors = ["yut-kt <yut.kt59@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chalice = "^1.29.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# https://beta.ruff.rs/docs/rules/
select = ["ALL"]
ignore = []
# Assume Python 3.11.*
target-version = "py311"
line-length = 120

[tool.ruff.isort]
known-third-party = []

[tool.ruff.per-file-ignores]
